--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<li>
 								<a href="#">Navigation</a>
 								<ul>
-									<li><a href="docs/resume.pdf" download>Curriculum vitae</a></li>
+									<li><a href="docs/resume.pdf" download>Curriculum Vitae</a></li>
 									<li><a href="https://github.com/gesteves91">Github</a></li>
 									<li><a href="https://www.linkedin.com/pub/geanderson-esteves/4a/180/143">LinkedIn</a></li>
 									<li><a href="https://www.facebook.com/geanderson.esteves">Facebook</a></li>
@@ -45,7 +45,7 @@
 					<div class="content">
 						<header>
 							<h2>Geanderson Esteves dos Santos</h2>
-							<p>A passionate Software Developer from Brazil.<br />
+							<p>A passionate Software Engineer from Brazil.<br />
 							Master degree candidate at <strong>UFMG</strong>.</p>
 						</header>
 						<span class="image"><img src="images/gean.jpg" alt="" /></span>
@@ -69,7 +69,7 @@
 									<p>Technology is in my vein since I was a little kid. I remember being amazed by computers and videogames very early in my life. In my teenager years, I have no doubts that I would like to study technology when I reach College. Then, my dream came true in 2011, when I started my first technical degree in <strong>Informatics</strong>. I am still amazed by it.
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p>My main goal is to get my Phd in <strong>Computer Science</strong> either in the USA or in Brazil. I consider myself being at the very middle of the two different paths, professional and educational. Being a Software Developer and a Teacher Assistant for so long makes me feel stuck in the dillema of being either a Professor or a Engineer when I get my Phd. Either way, I know I will do my best in both areas. </p>
+									<p>My main goal is to get my Phd in <strong>Computer Science</strong> either in the USA or in Brazil. I consider myself being at the very middle of the two different paths, professional and educational. Being a Software Developer and a Teacher Assistant for so long makes me feel stuck in the dilemma of being either a Professor or an Engineer when I get my PhD. Either way, I know I will do my best in both areas. </p>
 								</div>
 							</div>
 						</div>
@@ -84,9 +84,9 @@
 					<div class="content">
 						<header>
 							<h2>Academic Experience</h2>
-							<p>Bachelor of Information Systems at <strong>Pontifícia Universidade Católica de Minas Gerais</strong> (Brazil) and <strong>Indiana University</strong> (USA)</p>
+							<p>Bachelor of Information Systems at <a href="http://pucminas.br">Pontifícia Universidade Católica de Minas Gerais</a> (Brazil) and <a href="http://www.soic.indiana.edu/">Indiana University</a> (USA)</p>
 						</header>
-						<p>Back in 2011, I decided to start a technical degree in Informatics. Even before my graduation, I started my undergraduate degree at <strong>PUC Minas</strong> in Brazil. Had the opportunity to do part of my degree as a transfer student at <strong>IU</strong> in the USA. I have developed a strong interested for researching during these years at College. Therefore, I have published articles in differents Computer Science areas such as <strong>Human-Computer Interaction (Semiotic Engineering)</strong>, <strong>Databases (Sentiment Analysis)</strong> and <strong>Games (Games for Learning)</strong>. Was a teacher assistant at <strong>PUC Minas</strong> for 2 years, helping students taking <strong>Algorithms</strong>. </p>
+						<p>Back in 2011, I decided to start a technical degree in Informatics. Even before my graduation, I started my undergraduate degree at <strong>PUC Minas</strong> in Brazil. Had the opportunity to do part of my degree as a transfer student at <strong>IU</strong> in the USA. I have developed a strong interested for researching during these years at College. Therefore, I have published articles in different Computer Science areas such as <strong>Human-Computer Interaction (Semiotic Engineering)</strong>, <strong>Databases (Sentiment Analysis)</strong> and <strong>Games (Games for Learning)</strong>. Was a teacher assistant at <strong>PUC Minas</strong> for 2 years, helping students taking <strong>Algorithms</strong>. </p>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
@@ -99,69 +99,62 @@
 					<div class="content">
 						<header>
 							<h2>Professional Experience</h2>
-							<p><strong>Software Engineer</strong> intern at Avenue Code</p>
+							<p><strong>Software Engineer</strong> intern at <a href="http://www.avenuecode.com">Avenue Code</a></p>
 						</header>
-						<p>Back in 2012, I had the opportunity to start my first internship as a Programmer in a large company in Brazil. Since then, I have been working for almost 3 years in the Software Development industry. Due to my contact to different technologies, I could developed skills that helped me to certificate in <strong>Software Development</strong>, <strong>Web Development</strong> and <strong>Databases</strong>. When I was in the USA, I came to work for <strong>Avenue Code</strong> in San Francisco. Therefore, I was transferred to work for the same company in my hometown in Brazil.</p>
+						<p>Back in 2012, I had the opportunity to start my first internship as a Programmer in a large company in Brazil. Since then, I have been working for almost 3 years in the Software Development industry. Due to my contact to different technologies, I could develop skills that helped me to certificate in <strong> Software Development</strong>, <strong>Web Development</strong> and <strong>Databases</strong>. When I was in the USA, I came to work for <strong>Avenue Code</strong> in San Francisco. Therefore, I was transferred to work for the same company in my hometown in Brazil.</p>
 						
 					</div>
 					<a href="#cta" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- Cta -->
-				<section id="cta" class="wrapper style1 special fade-up">
-					<div class="container">
-						<header class="major">
-							<h2>Get in touch</h2>
-							<p>Use the form below or <a href="mailto:esteves.gean@gmail.com">send me an email</a>.</p>
-						</header>
-						<div class="box alt">
-							<div class="row uniform">
-									<section id="cta">
+					<section id="cta" class="wrapper style1 special fade-up">
+						<div class="container">
+							<header class="major">
+								<h2>Get in touch</h2>
+								<p>Use the form below or <a href="mailto:esteves.gean@gmail.com">send me an email</a>.</p>
+							</header>
+					<section id="cta">
 
-                <footer class="wrapper style4 special container small">
-
-                    <!-- Content -->
-                        <div class="content">
-                            <form name="contact-form" action="mail.php" method="POST" >
-                                <div class="row half no-collapse-1">
-                                    <div class="6u">
-                                        <input type="text" name="name" id="name" placeholder="Name" />
-                                    </div>
-                                    <div class="6u">
-                                        <input type="text" name="email" id="email" placeholder="Email" />
-                                    </div>
-                                </div>
-                                <div class="row half">
-                                    <div class="12u">
-                                        <input type="text" name="subject" id="subject" placeholder="Subject" />
-                                    </div>
-                                </div>
-                                <div class="row half">
-                                    <div class="12u">
-                                        <textarea name="message" id="message" placeholder="Message" rows="7"></textarea>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                        <ul class="buttons">
-                                            <a onclick="validateForm()" href="javascript:void(0);" class="button contact-submit">Send Message</a>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-
-                </footer>
+	               
+	                    <!-- Content -->
+	                        <div class="content">
+	                            <form name="contact-form" action="mail.php" method="POST" >
+	                                <div class="row uniform 50%">
+	                                    <div class="6u 12u$(xsmall)">
+	                                        <input type="text" name="name" id="name" placeholder="Name" />
+	                                    </div>
+	                                 	<div class="6u 12u$(xsmall)">   
+	                                    	<input type="text" name="email" id="email" placeholder="Email" />      
+	                                    </div>
+	                                    <div class="12u$">
+	                                        <input type="text" name="subject" id="subject" placeholder="Subject" />
+	                                    </div>
+										<div class="12u$">
+	                                        <textarea name="message" id="message" placeholder="Message" rows="7"></textarea>
+	                                    </div>
+	                                	<div class="12u$">
+	                                        <ul class="actions">
+	                                            <input onclick="validateForm()" href="javascript:void(0);" class="button special" value="Send Message" />
+	                                        </ul>
+	                                    </div>
+	                                </div>
+	                            </form>
+	                        </div>
+	                    </section>
+		                </div>
+	                </section>
 
 
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="https://twitter.com/gesteves91" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com/geanderson.esteves" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.linkedin.com/pub/geanderson-esteves/4a/180/143" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://instagram.com/gesteves91/" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/gesteves91" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#cta" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/gesteves91" class="icon 	fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/geanderson.esteves" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.linkedin.com/pub/geanderson-esteves/4a/180/143" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://instagram.com/gesteves91/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/gesteves91" class="icon fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="#cta" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Geanderson's Personal Page. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
