--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 						<li><a href="https://www.linkedin.com/pub/geanderson-esteves/4a/180/143" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://instagram.com/gesteves91/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://github.com/gesteves91" class="icon fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://gesantos.wordpress.com/" class="icon fa-wordpress"><span class="label">Wordpres</span></a></li>
 						<li><a href="#cta" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
