--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
 		<link rel="shortcut icon" type="image/png" href="images/ico.ico"/>
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+
+		<script>
+		
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  			ga('create', 'UA-70364162-1', 'auto');
+  			ga('send', 'pageview');
+
+		</script>
+
+
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
@@ -86,7 +100,7 @@
 							<h2>Academic Experience</h2>
 							<p>Bachelor of Information Systems at <a href="http://pucminas.br">Pontifícia Universidade Católica de Minas Gerais</a> (Brazil) and <a href="http://www.soic.indiana.edu/">Indiana University</a> (USA)</p>
 						</header>
-						<p>Back in 2011, I decided to start a technical degree in Informatics. Even before my graduation, I started my undergraduate degree at <strong>PUC Minas</strong> in Brazil. Had the opportunity to do part of my degree as a transfer student at <strong>IU</strong> in the USA. I have developed a strong interested for researching during these years at College. Therefore, I have published articles in different Computer Science areas such as <strong>Human-Computer Interaction (Semiotic Engineering)</strong>, <strong>Databases (Sentiment Analysis)</strong> and <strong>Games</strong>. Was a teacher assistant at <strong>PUC Minas</strong> for 2 years helping students taking <strong>Algorithms</strong>. </p>
+						<p>Back in 2011, I decided to start a technical degree in Informatics. Even before my graduation, I started my undergraduate degree at <strong>PUC Minas</strong> in Brazil. Had the opportunity to do part of my degree as an exchange student at <strong>IU</strong> in the USA. I have developed a strong interested for researching during College. Therefore, I have published articles in different Computer Science areas such as <strong>Human-Computer Interaction (Semiotic Engineering)</strong>, <strong>Databases (Sentiment Analysis)</strong> and <strong>Games</strong>. Was a teacher assistant at <strong>PUC Minas</strong> for 2 years helping students taking <strong>Algorithms</strong>. </p>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
@@ -99,7 +113,7 @@
 					<div class="content">
 						<header>
 							<h2>Professional Experience</h2>
-							<p><strong>Software Engineer</strong> intern at <a href="http://www.avenuecode.com">Avenue Code</a></p>
+							<p><strong>Software Engineer</strong> Intern at <a href="http://www.avenuecode.com">Avenue Code</a></p>
 						</header>
 						<p>Back in 2012, I had the opportunity to start my first internship as a Programmer in a large company in Brazil. Since then, I have been working for almost 3 years in the Software Development industry. Due to my contact to different technologies, I could develop skills that helped me to certificate in <strong> Software Development</strong>, <strong>Web Development</strong> and <strong>Databases</strong>. When I was in the USA, I came to work for <strong>Avenue Code</strong> in San Francisco. Therefore, I was transferred to work for the same company in my hometown in Brazil.</p>
 						
