--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 									<li><a href="http://about.me/gesantos">About Me</a></li>-->
 									<li><a href="docs/resume.pdf" download>Curriculum Vitae</a></li>
 									<li><a href="https://gesteves91.github.io/">Github</a></li>
-									<li><a href="https://www.linkedin.com/pub/geanderson-esteves/4a/180/143">LinkedIn</a></li>
+									<li><a href="www.linkedin.com/in/geandersonesteves">LinkedIn</a></li>
 									<li><a href="https://www.facebook.com/geanderson.esteves">Facebook</a></li>
 									<li><a href="https://twitter.com/gesteves91">Twitter</a></li>
 									<li><a href="http://lattes.cnpq.br/5959215636422122">Lattes</a></li>
@@ -101,7 +101,7 @@
 							<h2>Academic Experience</h2>
 							<p>Bachelor of Information Systems at <a href="http://pucminas.br">Pontifícia Universidade Católica de Minas Gerais</a> (Brazil) and <a href="http://www.soic.indiana.edu/">Indiana University</a> (USA)</p>
 						</header>
-						<p>Back in 2011, I decided to start a technical degree in Informatics. Even before my graduation, I started my undergraduate degree at <strong>PUC Minas</strong> in Brazil. Had the opportunity to do part of my degree as an exchange student at <strong>IU</strong> in the USA. I have developed a strong interested for researching during College. Therefore, I have published articles in different Computer Science areas such as <strong>Human-Computer Interaction (Semiotic Engineering)</strong>, <strong>Databases (Sentiment Analysis)</strong> and <strong>Games</strong>. Was a teacher assistant at <strong>PUC Minas</strong> for 2 years helping students taking <strong>Algorithms</strong>. </p>
+						<p>Back in 2011, I decided to start a technical degree in Informatics. Even before my graduation, I started my undergraduate degree at <strong>PUC Minas</strong> in Brazil. Had the opportunity to do part of my degree as an exchange student at <strong>IU</strong> in the USA. I have developed a strong interest for researching during College. Therefore, I have published articles in different Computer Science areas such as <strong>Human-Computer Interaction (Semiotic Engineering)</strong>, <strong>Databases (Sentiment Analysis)</strong> and <strong>Games</strong>. Was a teacher assistant at <strong>PUC Minas</strong> for 2 years helping students taking <strong>Computer Programming</strong> related courses. </p>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
@@ -166,7 +166,7 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/gesteves91" class="icon 	fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/geanderson.esteves" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.linkedin.com/pub/geanderson-esteves/4a/180/143" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="www.linkedin.com/in/geandersonesteves" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://instagram.com/gesteves91/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://gesteves91.github.io/" class="icon fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="https://gesantos.wordpress.com/" class="icon fa-wordpress"><span class="label">Wordpress</span></a></li>
